bug: List header creates extra space  (#710)
* added a class to change min height

* wrong save commited

* :bug: :lipstick: List header + section header styling

* :fire: remove unused css selector

--- a/src/kirby/components/list/list.component.scss
+++ b/src/kirby/components/list/list.component.scss
@@ -83,6 +83,8 @@ ion-list-header {
   letter-spacing: inherit;
   font-weight: inherit;
   font-size: inherit;
+  min-height: 0;
+  overflow: inherit;
 }
 
 .footer {
@@ -213,7 +215,8 @@ ion-item {
 
 .section-header {
   background-color: transparent;
-  padding: size('m') size('s') 0 size('s');
+  padding: size('m') size('s') size('xxs') size('s');
+  min-height: 0;
 }
 
 .no-more-items, .loading {
